5th impl, switched to linkedlist for templist